tests/custom-3.2.1/compliant/rolebinding.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: RoleBinding
metadata:
  name: compliant-rolebinding
  namespace: secure-ns
subjects:
  - kind: User
    name: alice
roleRef:
  kind: Role
  name: admin
  apiGroup: rbac.authorization.k8s.io
