tests/custom-3.2.1/compliant/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: custom-3.2.1-compliant
policies:
  - ../../../kyverno-policies/custom-3.2.1.yaml
resources:
  - rolebinding.yaml
results:
  - policy: cis-3-2-1-anonymous-auth-not-enabled
    rule: disallow-anonymous-role-binding
    resources:
      - compliant-rolebinding
    kind: RoleBinding
    result: pass
